fix: color contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@
   --color-primary-100: #fdf6e9;
   --color-primary-300: #d4b08c;
   --color-primary-500: #634b33;
+  --color-primary-800: #3A2E1F;
   --color-primary: #634b33;
 
   --color-secondary-100: #fff7e5;
@@ -52,28 +53,8 @@
 
 @utility bg-honeycomb {
   position: relative;
-  background-image: url('/patterns/honeycomb_pattern_dark.svg');
+  background-image: url('/patterns/honeycomb_pattern_light.svg');
   @apply bg-repeat;
-
-  &::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('/patterns/honeycomb_pattern_light.svg');
-    @apply bg-repeat;
-    opacity: 0;
-    transition: opacity 150ms ease;
-    z-index: 0;
-    pointer-events: none;
-    border-radius: inherit;
-  }
-
-  &:hover::before {
-    opacity: 1;
-  }
 }
 @utility bg-honeycomb-transparent {
   background-image: url('/patterns/honeycomb_pattern_transparent.svg');
@@ -85,4 +66,8 @@
     linear-gradient(--alpha(var(--gradient-color, var(--color-primary-100)) / var(--gradient-alpha, 70%)), --alpha(var(--gradient-color, var(--color-primary-100)) / var(--gradient-alpha, 70%))),
     url('/patterns/honeycomb_pattern_transparent.svg');
   @apply bg-repeat;
+}
+
+@utility text-shadow {
+  text-shadow: 1px 2px 1px var(--color-primary);
 }
